# binod2

./: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .stylelintrc.json  Dockerfile  Dockerfile.dev  README.md  architecture.md  docker-compose.yml  gitflow.sh  middleware.ts  package-lock.json  package.json  postcss.config.mjs  progress.md  rules.md  tailwind.config.ts
app/: globals.css  (+2 more)
backend/: .dockerignore  .flake8  Dockerfile  docker-compose.yml  litellm_config.yaml  main.py  plan  pyproject.toml  requirements.txt  run.sh  setup.py  setup.sh
backend/agent_binod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  agent_system.py  llm_client.py  main 2.py  main.py  models.py  shared_resources.py  vector_indexer.py  websocket_chat.py
backend/app/agents/: base 3.py  case 3.py  chat_agent.py  orchestrator 2.py  research.py  tools 4.py
backend/app/core/: __init__.py  auth.py  config.py  security.py  supabase.py
backend/app/document/: generator.py
backend/app/models/: auth.py  base.py  chat.py  database.py  document.py
backend/app/rag/: vector_store.py  vector_store_redisvl.py
backend/app/services/: ai.py  canvas.py  case.py  chat.py  document.py  redis.py  redis_client.py  research.py  storage.py  supabase.py
backend/app/utils/: __init__.py  auth.py  autocomplete.py  llm_proxy.py  redis_client.py  tracing.py  (+1 more)
backend/migrations/: documents 2.sql
backend/scripts/: chat_test.py  test_api.sh  test_auth.sh  test_auth_endpoints.sh  test_jwt_flow.sh
backend/supabase/: config.toml
backend/venv312/: pyvenv.cfg
(+165 files in other folders)
